added quantity option for each item and add to cart option

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -13,8 +13,10 @@
     box-sizing: border-box;
 }
 
-.nav-spacer {
-    flex: 1; /* Pushes search to center */
+.navbar-left {
+    flex: 1; 
+    display: flex;
+    align-items: center;
 }
 
 .search-container {
@@ -47,4 +49,11 @@
 
 .nav-links a:hover {
     color: lightgray !important;
+}
+
+.nav-logo{
+    height: 40px; /* Adjust this height to fit your navbar */
+    width: auto;
+    display: block;
+    object-fit: contain; /* Prevents stretching */
 }
